--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "require": {
     "symfony/console": "^6.0",
     "monolog/monolog": "^2.9",
-    "guzzlehttp/guzzle": "^7.0",
-    "psr/log": "^1.1"
+    "psr/log": "^1.1",
+    "guzzlehttp/guzzle": "7.5.0"
   }
 }
