--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -1,8 +1,9 @@
-name: Auto-merge Patch/Minor Dependabot PRs
+# .github/workflows/dependabot-automerge.yml
+name: Dependabot auto-approve & auto-merge
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    types: [opened, reopened, synchronize, ready_for_review]
 
 permissions:
   contents: write
@@ -10,22 +11,30 @@ permissions:
 
 jobs:
   automerge:
-    if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
+
     steps:
-      - uses: dependabot/fetch-metadata@v2
-        id: metadata
+      - name: Fetch metadata
+        id: meta
+        uses: dependabot/fetch-metadata@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Approve if patch/minor
+      - name: Approve PR
         if: |
-          steps.metadata.outputs.update-type == 'version-update:semver-major'
-        run: gh pr review ${{ github.event.pull_request.html_url }} --approve -b "Auto-approval for ${{ steps.metadata.outputs.update-type }}"
+          steps.meta.outputs.update-type == 'version-update:semver-patch' ||
+          steps.meta.outputs.update-type == 'version-update:semver-minor'
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge
         if: |
-          steps.metadata.outputs.update-type == 'version-update:semver-major'
+          steps.meta.outputs.update-type == 'version-update:semver-patch' ||
+          steps.meta.outputs.update-type == 'version-update:semver-minor'
+        run: gh pr merge --auto --squash "$PR_URL"
         env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh pr merge ${{ github.event.pull_request.html_url }} --auto --squash
