--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -28,8 +28,7 @@ jobs:
 
       - name: Approve PR
         if: |
-          steps.meta.outputs.update-type == 'version-update:semver-patch' ||
-          steps.meta.outputs.update-type == 'version-update:semver-minor'
+          steps.meta.outputs.update-type == 'version-update:semver-major'
         run: gh pr review "$PR_URL" --approve -b "Auto-approved by GitHub App"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
@@ -37,8 +36,7 @@ jobs:
 
       - name: Enable auto-merge
         if: |
-          steps.meta.outputs.update-type == 'version-update:semver-patch' ||
-          steps.meta.outputs.update-type == 'version-update:semver-minor'
+          steps.meta.outputs.update-type == 'version-update:semver-major'
         run: gh pr merge "$PR_URL" --auto --squash
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
