--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -16,21 +16,19 @@ jobs:
     steps:
       - name: Fetch metadata
         id: meta
-        uses: dependabot/fetch-metadata@v2
+        uses: dependabot/fetch-metadata@v2.2.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Approve PR
-        if: |
-          steps.meta.outputs.update-type == 'version-update:semver-major'
+      - name: Approve PR (major only)
+        if: steps.meta.outputs.update-type == 'version-update:semver-major'
         run: gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Enable auto-merge
-        if: |
-          steps.meta.outputs.update-type == 'version-update:semver-major'
+      - name: Enable auto-merge (major after approve)
+        if: steps.meta.outputs.update-type == 'version-update:semver-major'
         run: gh pr merge --auto --squash "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
