--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "test/dependabot-playground",
   "require": {
-    "symfony/console": "7.3.0",
-    "twig/twig": "3.21.0",
-    "doctrine/orm": "3.5.0",
-    "doctrine/dbal": "3.8.2",
-    "phpunit/phpunit": "12.0.0",
-    "lcobucci/jwt": "5.4.0",
-    "league/flysystem": "3.28.0"
+    "symfony/console": "^7.3",
+    "twig/twig": "^3.21",
+    "doctrine/orm": "^3.5",
+    "doctrine/dbal": "^3.8.2",
+    "phpunit/phpunit": "^12.0",
+    "lcobucci/jwt": "^5.4",
+    "league/flysystem": "^3.28"
   }
 }
