--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
   "name": "test/dependabot-playground-alt",
   "require": {
     "guzzlehttp/guzzle": "^7.8",
-    "nesbot/carbon": "^3.10",
+    "nesbot/carbon": "^2.70",
     "fakerphp/faker": "^1.21",
-    "symfony/http-foundation": "^7.1",
+    "symfony/console": "^7.0",
     "ramsey/uuid": "^4.7",
     "phpmailer/phpmailer": "^6.9"
   }
