--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -1,64 +1,66 @@
-name: Dependabot auto-approve & auto-merge (minor/patch only)
+name: Dependabot Auto-merge (Minor/Patch Only)
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  pull_request_target:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - ready_for_review
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  dependabot-minor-patch:
+  automerge:
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
-
     steps:
-      - name: Fetch Dependabot metadata
-        id: metadata
-        uses: dependabot/fetch-metadata@08eff52bf64351f401fb50d4972fa95b9f2c2d1b
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Detect update type manually
-        id: detect
+      - name: Extract versions and determine update type
+        id: version_check
         run: |
-          old="${{ steps.metadata.outputs.previous-version }}"
-          new="${{ steps.metadata.outputs.new-version }}"
+          PR_TITLE=$(gh pr view ${{ github.event.pull_request.number }} --json title -q .title)
+          echo "PR Title: $PR_TITLE"
 
-          echo "Old version: $old"
-          echo "New version: $new"
-
-          # extraire major/minor/patch
-          major_old=$(echo $old | cut -d. -f1)
-          major_new=$(echo $new | cut -d. -f1)
-          minor_old=$(echo $old | cut -d. -f2)
-          minor_new=$(echo $new | cut -d. -f2)
-
-          if [ "$major_old" != "$major_new" ]; then
-            echo "type=major" >> $GITHUB_OUTPUT
-          elif [ "$minor_old" != "$minor_new" ]; then
-            echo "type=minor" >> $GITHUB_OUTPUT
-          else
-            echo "type=patch" >> $GITHUB_OUTPUT
+          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \K[0-9]+\.[0-9]+\S* to [0-9]+\.[0-9]+\S*')
+          
+          # Si on ne trouve pas de versions, on arrête par sécurité
+          if [ -z "$VERSION_MATCH" ]; then
+            echo "Could not extract versions from title. Skipping auto-merge for safety."
+            echo "is_major=true" >> $GITHUB_OUTPUT 
+            exit 0
           fi
+          
+          OLD_VERSION=$(echo "$VERSION_MATCH" | awk '{print $1}')
+          NEW_VERSION=$(echo "$VERSION_MATCH" | awk '{print $3}')
 
-      - name: Skip if major update
-        if: steps.detect.outputs.type == 'major'
+          OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d'.' -f1)
+          NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d'.' -f1)
+
+          echo "Old version: $OLD_VERSION (Major: $OLD_MAJOR)"
+          echo "New version: $NEW_VERSION (Major: $NEW_MAJOR)"
+
+          # On compare les versions majeures pour déterminer le type de mise à jour
+          if [ "$OLD_MAJOR" == "$NEW_MAJOR" ]; then
+            echo "This is a MINOR or PATCH update."
+            echo "is_major=false" >> $GITHUB_OUTPUT
+          else
+            echo "This is a MAJOR update. Manual review required."
+            echo "is_major=true" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Approve and enable auto-merge for minor/patch updates
+        if: steps.version_check.outputs.is_major == 'false'
         run: |
-          echo "This is a major update, skipping."
-          exit 0
-
-      - name: Auto-approve PR
-        if: steps.detect.outputs.type == 'minor' || steps.detect.outputs.type == 'patch'
-        run: gh pr review --approve "$PR_URL"
+          echo "Approving and enabling auto-merge..."
+          gh pr review --approve ${{ github.event.pull_request.number }}
+          gh pr merge --auto --merge ${{ github.event.pull_request.number }}
         env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Enable auto-merge (merge commit)
-        if: steps.detect.outputs.type == 'minor' || steps.detect.outputs.type == 'patch'
-        run: gh pr merge --auto --merge "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Notify on major update
+        if: steps.version_check.outputs.is_major == 'true'
+        run: echo "Skipping auto-merge major version update detected."
