--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -19,21 +19,21 @@ jobs:
     steps:
       - name: Extract versions and determine update type
         id: version_check
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
-          PR_TITLE=$(gh pr view ${{ github.event.pull_request.number }} --json title -q .title)
           echo "PR Title: $PR_TITLE"
 
-          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \K[0-9]+\.[0-9]+\S* to [0-9]+\.[0-9]+\S*')
+          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \S*(\d+(\.\d+)+)\S* to \S*(\d+(\.\d+)+)\S*')
           
-          # Si on ne trouve pas de versions, on arrête par sécurité
           if [ -z "$VERSION_MATCH" ]; then
             echo "Could not extract versions from title. Skipping auto-merge for safety."
-            echo "is_major=true" >> $GITHUB_OUTPUT 
+            echo "is_major=true" >> "$GITHUB_OUTPUT"
             exit 0
           fi
           
-          OLD_VERSION=$(echo "$VERSION_MATCH" | awk '{print $1}')
-          NEW_VERSION=$(echo "$VERSION_MATCH" | awk '{print $3}')
+          OLD_VERSION=$(echo "$VERSION_MATCH" | awk '{print $1}' | grep -oP '\d+(\.\d+)+')
+          NEW_VERSION=$(echo "$VERSION_MATCH" | awk '{print $3}' | grep -oP '\d+(\.\d+)+')
 
           OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d'.' -f1)
           NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d'.' -f1)
@@ -41,16 +41,13 @@ jobs:
           echo "Old version: $OLD_VERSION (Major: $OLD_MAJOR)"
           echo "New version: $NEW_VERSION (Major: $NEW_MAJOR)"
 
-          # On compare les versions majeures pour déterminer le type de mise à jour
           if [ "$OLD_MAJOR" == "$NEW_MAJOR" ]; then
             echo "This is a MINOR or PATCH update."
-            echo "is_major=false" >> $GITHUB_OUTPUT
+            echo "is_major=false" >> "$GITHUB_OUTPUT"
           else
             echo "This is a MAJOR update. Manual review required."
-            echo "is_major=true" >> $GITHUB_OUTPUT
+            echo "is_major=true" >> "$GITHUB_OUTPUT"
           fi
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Approve and enable auto-merge for minor/patch updates
         if: steps.version_check.outputs.is_major == 'false'
@@ -63,4 +60,4 @@ jobs:
 
       - name: Notify on major update
         if: steps.version_check.outputs.is_major == 'true'
-        run: echo "Skipping auto-merge major version update detected."
+        run: echo "Skipping auto-merge: Major version update detected."
