--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -1,12 +1,8 @@
-name: Dependabot Auto-merge (Minor/Patch Only)
+name: Dependabot auto-approve & auto-merge (minor/patch)
 
 on:
   pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - ready_for_review
+    types: [opened, synchronize, reopened]
 
 permissions:
   contents: write
@@ -16,48 +12,57 @@ jobs:
   automerge:
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
-    steps:
-      - name: Extract versions and determine update type
-        id: version_check
-        env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
-        run: |
-          echo "PR Title: $PR_TITLE"
 
-          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \S*(\d+(\.\d+)+)\S* to \S*(\d+(\.\d+)+)\S*')
-          
-          if [ -z "$VERSION_MATCH" ]; then
-            echo "Could not extract versions from title. Skipping auto-merge for safety."
-            echo "is_major=true" >> "$GITHUB_OUTPUT"
+    steps:
+      - name: Fetch Dependabot metadata
+        id: metadata
+        uses: dependabot/fetch-metadata@08eff52bf64351f401fb50d4972fa95b9f2c2d1b
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Detect semver bump
+        id: semver
+        run: |
+          old=$(echo '${{ steps.metadata.outputs.updated-dependencies-json }}' | jq -r '.[0].previous-version')
+          new=$(echo '${{ steps.metadata.outputs.updated-dependencies-json }}' | jq -r '.[0].new-version')
+
+          if [ -z "$old" ] || [ -z "$new" ]; then
+            echo "Impossible de détecter les versions"
+            echo "level=unknown" >> $GITHUB_OUTPUT
             exit 0
           fi
-          
-          OLD_VERSION=$(echo "$VERSION_MATCH" | awk '{print $1}' | grep -oP '\d+(\.\d+)+')
-          NEW_VERSION=$(echo "$VERSION_MATCH" | awk '{print $3}' | grep -oP '\d+(\.\d+)+')
 
-          OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d'.' -f1)
-          NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d'.' -f1)
+          old_major=$(echo $old | cut -d. -f1)
+          old_minor=$(echo $old | cut -d. -f2)
+          old_patch=$(echo $old | cut -d. -f3)
 
-          echo "Old version: $OLD_VERSION (Major: $OLD_MAJOR)"
-          echo "New version: $NEW_VERSION (Major: $NEW_MAJOR)"
+          new_major=$(echo $new | cut -d. -f1)
+          new_minor=$(echo $new | cut -d. -f2)
+          new_patch=$(echo $new | cut -d. -f3)
 
-          if [ "$OLD_MAJOR" == "$NEW_MAJOR" ]; then
-            echo "This is a MINOR or PATCH update."
-            echo "is_major=false" >> "$GITHUB_OUTPUT"
+          if [ "$old_major" != "$new_major" ]; then
+            level=major
+          elif [ "$old_minor" != "$new_minor" ]; then
+            level=minor
+          elif [ "$old_patch" != "$new_patch" ]; then
+            level=patch
           else
-            echo "This is a MAJOR update. Manual review required."
-            echo "is_major=true" >> "$GITHUB_OUTPUT"
+            level=none
           fi
-          
-      - name: Approve and enable auto-merge for minor/patch updates
-        if: steps.version_check.outputs.is_major == 'false'
-        run: |
-          echo "Approving and enabling auto-merge..."
-          gh pr review --approve ${{ github.event.pull_request.number }}
-          gh pr merge --auto --merge ${{ github.event.pull_request.number }}
+
+          echo "old=$old new=$new => $level"
+          echo "level=$level" >> $GITHUB_OUTPUT
+
+      - name: Auto-approve PR
+        if: ${{ steps.semver.outputs.level == 'minor' || steps.semver.outputs.level == 'patch' }}
+        run: gh pr review --approve "$PR_URL"
         env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Notify on major update
-        if: steps.version_check.outputs.is_major == 'true'
-        run: echo "Skipping auto-merge Major version update detected."
+      - name: Enable auto-merge (merge commit)
+        if: ${{ steps.semver.outputs.level == 'minor' || steps.semver.outputs.level == 'patch' }}
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
