--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -2,11 +2,7 @@ name: Dependabot Auto-merge (Minor/Patch Only)
 
 on:
   pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - ready_for_review
+    types: [opened, synchronize, reopened, ready_for_review]
 
 permissions:
   contents: write
@@ -14,7 +10,7 @@ permissions:
 
 jobs:
   automerge:
-    if: github.actor == 'dependabot[bot]'
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
       - name: Extract versions and determine update type
@@ -28,7 +24,7 @@ jobs:
           
           if [ -z "$VERSION_MATCH" ]; then
             echo "Could not extract versions from title. Skipping auto-merge for safety."
-            echo "is_major=true" >> "$GITHUB_OUTPUT"
+            echo "level=unknown" >> "$GITHUB_OUTPUT"
             exit 0
           fi
           
@@ -36,28 +32,35 @@ jobs:
           NEW_VERSION=$(echo "$VERSION_MATCH" | awk '{print $3}' | grep -oP '\d+(\.\d+)+')
 
           OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d'.' -f1)
+          OLD_MINOR=$(echo "$OLD_VERSION" | cut -d'.' -f2)
+          OLD_PATCH=$(echo "$OLD_VERSION" | cut -d'.' -f3)
+
           NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d'.' -f1)
+          NEW_MINOR=$(echo "$NEW_VERSION" | cut -d'.' -f2)
+          NEW_PATCH=$(echo "$NEW_VERSION" | cut -d'.' -f3)
 
-          echo "Old version: $OLD_VERSION (Major: $OLD_MAJOR)"
-          echo "New version: $NEW_VERSION (Major: $NEW_MAJOR)"
-
-          if [ "$OLD_MAJOR" == "$NEW_MAJOR" ]; then
-            echo "This is a MINOR or PATCH update."
-            echo "is_major=false" >> "$GITHUB_OUTPUT"
+          if [ "$OLD_MAJOR" != "$NEW_MAJOR" ]; then
+            level=major
+          elif [ "$OLD_MINOR" != "$NEW_MINOR" ]; then
+            level=minor
+          elif [ "$OLD_PATCH" != "$NEW_PATCH" ]; then
+            level=patch
           else
-            echo "This is a MAJOR update. Manual review required."
-            echo "is_major=true" >> "$GITHUB_OUTPUT"
+            level=none
           fi
-          
+
+          echo "Old: $OLD_VERSION → New: $NEW_VERSION → $level"
+          echo "level=$level" >> "$GITHUB_OUTPUT"
+
       - name: Approve and enable auto-merge for minor/patch updates
-        if: steps.version_check.outputs.is_major == 'false'
+        if: steps.version_check.outputs.level == 'minor' || steps.version_check.outputs.level == 'patch'
         run: |
           echo "Approving and enabling auto-merge..."
-          gh pr review --approve ${{ github.event.pull_request.number }}
-          gh pr merge --auto --merge ${{ github.event.pull_request.number }}
+          gh pr review --approve ${{ github.event.pull_request.html_url }}
+          gh pr merge --auto --merge ${{ github.event.pull_request.html_url }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Notify on major update
-        if: steps.version_check.outputs.is_major == 'true'
-        run: echo "Skipping auto-merge major version update detected."
+        if: steps.version_check.outputs.level == 'major'
+        run: echo "Skipping auto-merge: Major version update detected."
