--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -22,28 +22,37 @@ jobs:
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
-          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \S*(\d+(\.\d+)+)\S* to \S*(\d+(\.\d+)+)\S*')
-          
+          echo "PR Title: $PR_TITLE"
+          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \S+ to \S+')
+
           if [ -z "$VERSION_MATCH" ]; then
+            echo "Impossible d'extraire les versions → sécurité"
             echo "is_major=true" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-          
-          OLD_VERSION=$(echo "$VERSION_MATCH" | awk '{print $1}' | grep -oP '\d+(\.\d+)+')
-          NEW_VERSION=$(echo "$VERSION_MATCH" | awk '{print $3}' | grep -oP '\d+(\.\d+)+')
+
+          OLD_WORD=$(echo "$VERSION_MATCH" | awk '{print $2}')
+          NEW_WORD=$(echo "$VERSION_MATCH" | awk '{print $4}')
+
+          OLD_VERSION=$(echo "$OLD_WORD" | tr -dc '0-9.')
+          NEW_VERSION=$(echo "$NEW_WORD" | tr -dc '0-9.')
 
           OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d'.' -f1)
           NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d'.' -f1)
+
+          echo "Old: $OLD_VERSION (major $OLD_MAJOR)"
+          echo "New: $NEW_VERSION (major $NEW_MAJOR)"
 
           if [ "$OLD_MAJOR" == "$NEW_MAJOR" ]; then
             echo "is_major=false" >> "$GITHUB_OUTPUT"
           else
             echo "is_major=true" >> "$GITHUB_OUTPUT"
           fi
-          
+
       - name: Approve and enable auto-merge for minor/patch updates
         if: steps.version_check.outputs.is_major == 'false'
         run: |
+          echo "Approving and enabling auto-merge..."
           gh pr review --approve ${{ github.event.pull_request.html_url }}
           gh pr merge --auto --merge ${{ github.event.pull_request.html_url }}
         env:
@@ -51,4 +60,4 @@ jobs:
 
       - name: Notify on major update
         if: steps.version_check.outputs.is_major == 'true'
-        run: echo "Skipping auto-merge major version update detected."
+        run: echo "Skipping auto-merge Major version update detected."
