--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,8 +10,8 @@ updates:
     allow:
       - dependency-type: direct
     commit-message:
-      prefix: chore
-      include: scope
+      prefix: Bumps
+      include: false
     groups:
       symfony:
         patterns:
