--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -1,63 +1,36 @@
-name: Dependabot Auto-merge (Minor/Patch Only)
+name: Dependabot auto-approve & auto-merge (major only)
 
 on:
-  pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - ready_for_review
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  automerge:
+  dependabot-major:
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
+
     steps:
-      - name: Extract versions and determine update type
-        id: version_check
+      - name: Fetch Dependabot metadata
+        id: metadata
+        uses: dependabot/fetch-metadata@08eff52bf64351f401fb50d4972fa95b9f2c2d1b
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Auto-approve PR
+        if: steps.metadata.outputs.update-type != 'version-update:semver-major'
+        run: gh pr review --approve "$PR_URL"
         env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
-        run: |
-          echo "PR Title: $PR_TITLE"
-          VERSION_MATCH=$(echo "$PR_TITLE" | grep -oP 'from \S+ to \S+')
-
-          if [ -z "$VERSION_MATCH" ]; then
-            echo "Impossible d'extraire les versions → sécurité"
-            echo "is_major=true" >> "$GITHUB_OUTPUT"
-            exit 0
-          fi
-
-          OLD_WORD=$(echo "$VERSION_MATCH" | awk '{print $2}')
-          NEW_WORD=$(echo "$VERSION_MATCH" | awk '{print $4}')
-
-          OLD_VERSION=$(echo "$OLD_WORD" | tr -dc '0-9.')
-          NEW_VERSION=$(echo "$NEW_WORD" | tr -dc '0-9.')
-
-          OLD_MAJOR=$(echo "$OLD_VERSION" | cut -d'.' -f1)
-          NEW_MAJOR=$(echo "$NEW_VERSION" | cut -d'.' -f1)
-
-          echo "Old: $OLD_VERSION (major $OLD_MAJOR)"
-          echo "New: $NEW_VERSION (major $NEW_MAJOR)"
-
-          if [ "$OLD_MAJOR" == "$NEW_MAJOR" ]; then
-            echo "is_major=false" >> "$GITHUB_OUTPUT"
-          else
-            echo "is_major=true" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Approve and enable auto-merge for minor/patch updates
-        if: steps.version_check.outputs.is_major == 'false'
-        run: |
-          echo "Approving and enabling auto-merge..."
-          gh pr review --approve ${{ github.event.pull_request.html_url }}
-          gh pr merge --auto --merge ${{ github.event.pull_request.html_url }}
-        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Notify on major update
-        if: steps.version_check.outputs.is_major == 'true'
-        run: echo "Skipping auto-merge Major version update detected."
+      - name: Enable auto-merge (merge commit)
+        if: steps.metadata.outputs.update-type != 'version-update:semver-major'
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
