--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "test/dependabot-playground",
   "require": {
-    "monolog/monolog": "1.0.0",
-    "guzzlehttp/guzzle": "6.5.0",
-    "nesbot/carbon": "2.60.0",
-    "phpmailer/phpmailer": "6.8.0",
-    "fakerphp/faker": "1.19.0",
-    "ramsey/uuid": "4.0.0",
-    "symfony/console": "6.0.0"
+    "monolog/monolog": "^1.0.0",
+    "guzzlehttp/guzzle": "^6.5.0",
+    "nesbot/carbon": "^2.60.0",
+    "phpmailer/phpmailer": "^6.8.0",
+    "fakerphp/faker": "^1.19.0",
+    "ramsey/uuid": "^4.0.0",
+    "symfony/console": "^6.0.0"
   }
 }
