--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,20 @@
 {
   "name": "test/dependabot-playground",
   "require": {
-    "monolog/monolog": "1.0.0",
-    "guzzlehttp/guzzle": "6.5.0",
+    "monolog/monolog": "2.3.0",
+    "guzzlehttp/guzzle": "7.2.0",
     "nesbot/carbon": "2.60.0",
     "phpmailer/phpmailer": "6.8.0",
-    "fakerphp/faker": "^1.19.0",
-    "ramsey/uuid": "^4.0.0",
-    "symfony/console": "6.0.0"
+    "fakerphp/faker": "1.19.0",
+    "ramsey/uuid": "4.2.0",
+    "symfony/console": "6.0.0",
+    "symfony/http-foundation": "6.0.0",
+    "symfony/process": "6.0.0",
+    "symfony/var-dumper": "6.0.0",
+    "doctrine/dbal": "3.2.0",
+    "doctrine/orm": "2.11.0",
+    "psr/log": "1.1.4",
+    "illuminate/support": "9.21.0",
+    "twig/twig": "3.3.0"
   }
 }
