--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,22 @@
     "monolog/monolog": "2.3.0",
     "guzzlehttp/guzzle": "7.2.0",
     "nesbot/carbon": "2.60.0",
-    "phpmailer/phpmailer": "6.10.0",
-    "fakerphp/faker": "1.24.1",
-    "ramsey/uuid": "4.9.0",
+    "phpmailer/phpmailer": "6.6.0",
+    "fakerphp/faker": "1.14.0",
+    "ramsey/uuid": "4.2.0",
     "symfony/console": "6.0.0",
     "symfony/process": "6.0.0",
-    "symfony/var-dumper": "6.0.0",
     "symfony/http-foundation": "6.0.0",
     "doctrine/dbal": "3.2.0",
     "doctrine/orm": "2.11.0",
     "twig/twig": "3.3.0",
     "psr/log": "1.1.4",
-    "illuminate/support": "9.21.0"
+    "illuminate/support": "9.21.0",
+    "league/flysystem": "2.0.0",
+    "phpunit/phpunit": "9.5.0",
+    "symfony/uid": "6.0.0",
+    "lcobucci/jwt": "4.1.0",
+    "symfony/mailer": "6.0.0",
+    "symfony/http-client": "6.0.0"
   }
 }
