--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: "Run semantic-release"
           command: |
-            cat > .releaserc.json <<'EOF'
+            cat > .releaserc.json \<<EOF
             {
               "branches": ["main"],
               "plugins": [
