--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
   "name": "test/dependabot-playground",
   "require": {
-    "monolog/monolog": "^2.3",
-    "guzzlehttp/guzzle": "^7.2",
-    "nesbot/carbon": "^2.60",
-    "phpmailer/phpmailer": "^6.6",
-    "fakerphp/faker": "^1.14",
-    "ramsey/uuid": "^4.2",
-    "symfony/console": "^6.0",
-    "symfony/process": "^6.0",
-    "symfony/http-foundation": "^6.0",
-    "doctrine/dbal": "^3.2",
-    "doctrine/orm": "^2.11",
-    "twig/twig": "^3.3",
-    "psr/log": "^1.1",
-    "illuminate/support": "^9.21",
-    "league/flysystem": "^2.0",
-    "phpunit/phpunit": "^9.5",
-    "symfony/uid": "^6.0",
-    "lcobucci/jwt": "^4.1",
-    "symfony/mailer": "^6.0",
-    "symfony/http-client": "^6.0"
+    "monolog/monolog": "2.3.0",
+    "guzzlehttp/guzzle": "7.2.0",
+    "nesbot/carbon": "2.60.0",
+    "phpmailer/phpmailer": "6.6.0",
+    "fakerphp/faker": "1.14.0",
+    "ramsey/uuid": "4.2.0",
+    "symfony/console": "6.0.0",
+    "symfony/process": "6.0.0",
+    "symfony/http-foundation": "6.0.0",
+    "doctrine/dbal": "3.2.0",
+    "doctrine/orm": "2.11.0",
+    "twig/twig": "3.3.0",
+    "psr/log": "1.1.4",
+    "illuminate/support": "9.21.0",
+    "league/flysystem": "2.0.0",
+    "phpunit/phpunit": "9.5.0",
+    "symfony/uid": "6.0.0",
+    "lcobucci/jwt": "4.1.0",
+    "symfony/mailer": "6.0.0",
+    "symfony/http-client": "6.0.0"
   }
 }
