--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             npm install semantic-release \
               @semantic-release/commit-analyzer \
               @semantic-release/release-notes-generator \
-              @semantic-release/github
+              @semantic-release/github \
               conventional-changelog-conventionalcommits
       - run:
           name: "Configure Git remote with GH_TOKEN"
