--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -20,14 +20,14 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Auto-approve PR
-        if: |
-          steps.metadata.outputs.update-type == 'version-update:semver-patch' || 
-          steps.metadata.outputs.update-type == 'version-update:semver-minor'
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Auto-approve PR
+      #   if: |
+      #     steps.metadata.outputs.update-type == 'version-update:semver-patch' || 
+      #     steps.metadata.outputs.update-type == 'version-update:semver-minor'
+      #   run: gh pr review --approve "$PR_URL"
+      #   env:
+      #     PR_URL: ${{ github.event.pull_request.html_url }}
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge
         if: |
