--- a/.github/workflows/pr-notify.yml
+++ b/.github/workflows/pr-notify.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   notify:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - name: Send message to Google Chat
         env:
@@ -17,19 +18,18 @@ jobs:
           EVENT_NAME="${{ github.event_name }}"
           PR_TITLE="${{ github.event.pull_request.title }}"
           PR_URL="${{ github.event.pull_request.html_url }}"
-          ACTOR="${{ github.actor }}"
+          ACTOR="${{ github.event.pull_request.user.login }}"
           REVIEW_STATE="${{ github.event.review.state }}"
-          REVIEWER="${{ github.event.review.user.login }}"
 
           if [ "$EVENT_NAME" = "pull_request" ]; then
-            MESSAGE="Nouvelle PR ouverte par ${ACTOR} : [${PR_TITLE}](${PR_URL})"
+            MESSAGE="🛠️ *${ACTOR}* a créé une nouvelle PR : [${PR_TITLE}](${PR_URL})"
           elif [ "$EVENT_NAME" = "pull_request_review" ]; then
             if [ "$REVIEW_STATE" = "approved" ]; then
-              MESSAGE="✅ ${REVIEWER} a approuvé la PR : [${PR_TITLE}](${PR_URL})"
+              MESSAGE="✅ *${ACTOR}*, ta PR a été approuvée : [${PR_TITLE}](${PR_URL})"
             elif [ "$REVIEW_STATE" = "changes_requested" ]; then
-              MESSAGE="⚠️ ${REVIEWER} a demandé des changements sur : [${PR_TITLE}](${PR_URL})"
+              MESSAGE="⚠️ *${ACTOR}*, des changements ont été demandés pour ta PR : [${PR_TITLE}](${PR_URL})"
             else
-              MESSAGE="💬 ${REVIEWER} a commenté la PR : [${PR_TITLE}](${PR_URL})"
+              MESSAGE="💬 *${ACTOR}*, un commentaire a été ajouté pour ta PR : [${PR_TITLE}](${PR_URL})"
             fi
           fi
 
